upgrade react-native to v0.61.0
remove dependencies supplied by the react-native template
specify iOS version for detox until iOS 13 is supported
reorganize azure-pipelines stage to list apple simulators in display-tools step
update azure-pipelines to macos 10.14
fix login e2e tests

--- a/templates/react-native-navigation/MainApplication.java.ejs
+++ b/templates/react-native-navigation/MainApplication.java.ejs
@@ -1,21 +1,19 @@
 package com.<%= props.packageName %>;
 
 import android.app.Application;
-import android.util.Log;
+import android.content.Context;
 
 import com.facebook.react.PackageList;
-import com.facebook.hermes.reactexecutor.HermesExecutorFactory;
-import com.facebook.react.bridge.JavaScriptExecutorFactory;
 import com.facebook.react.ReactApplication;
 import com.facebook.react.ReactNativeHost;
 import com.facebook.react.ReactPackage;
 import com.facebook.soloader.SoLoader;
+import com.facebook.react.bridge.JavaScriptExecutorFactory;
+import java.util.List;
 
 import com.reactnativenavigation.NavigationApplication;
 import com.reactnativenavigation.react.NavigationReactNativeHost;
 import com.reactnativenavigation.react.ReactGateway;
-
-import java.util.List;
 
 public class MainApplication extends NavigationApplication {
   @Override
