--- a/boilerplate/test/setup.js.ejs
+++ b/boilerplate/test/setup.js.ejs
@@ -1,4 +1,5 @@
 import { configure } from 'enzyme'
+import mockAsyncStorage from '@react-native-community/async-storage/jest/async-storage-mock';
 import Adapter from 'enzyme-adapter-react-16'
 import Config from '../app/config/debug-config'
 
@@ -7,6 +8,7 @@ configure({ adapter: new Adapter() })
 
 // Mock your external modules here if needed
 jest
+  .mock('@react-native-community/async-storage', () => mockAsyncStorage)
   .mock('react-native-navigation', () => {
     return { Navigation: { showModal: jest.fn((url) => { return [] }) } }
   })
