e2e test fixes, remove dependencies provided by react-native
update to macOS 10.14
list available iOS simulators in display-tools
skip war packaging of backend

--- a/boilerplate/test/spec/modules/login/login.sagas.spec.js.ejs
+++ b/boilerplate/test/spec/modules/login/login.sagas.spec.js.ejs
@@ -95,7 +95,7 @@ test('login failure path', () => {
   // Attempt to login and fail
   expect(step(response)).toEqual(call(FixtureAPI.login, authObj))
   // Send the error
-  expect(step(response)).toEqual(put(LoginActions.loginFailure('Bad Credentials')))
+  expect(step(response)).toEqual(put(LoginActions.loginFailure('Bad credentials')))
   <%_ } _%>
 })
 <%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
