--- a/boilerplate/app/modules/login/login.sagas.js.ejs
+++ b/boilerplate/app/modules/login/login.sagas.js.ejs
@@ -88,7 +88,7 @@ export function * login (api, { username, password }) {
     <%_ } _%>
     yield put({ type: 'RELOGIN_OK' })
   } else {
-    yield put(LoginActions.loginFailure((response.data && response.data.detail) || 'Bad Credentials'))
+    yield put(LoginActions.loginFailure((response.data && response.data.detail) || 'Bad credentials'))
   }
 }
 <%_ } _%>
