--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -56,6 +56,8 @@
     "buffer": "5.4.3",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-prettier": "3.1.2",
     "ignite-jhipster": "<%= props.packageVersion %>",
     <%_ if (!props.skipCommitHook) { _%>
     "lint-staged": "9.3.0",
@@ -69,6 +71,7 @@
     <%_ } _%>
     "mockery": "2.1.0",
     "react-dom": "16.8.6",
+    "prettier": "1.19.1",
     "reactotron-react-native": "4.0.0",
     "reactotron-redux": "3.1.2",
     "reactotron-redux-saga": "4.2.2",
