--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -21,22 +21,22 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "1.6.1",
+    "@react-native-community/async-storage": "1.8.1",
     "apisauce": "1.1.1",
     "format-json": "1.0.3",
     "identity-obj-proxy": "3.0.0",
     "lodash": "4.17.15",
     "prop-types": "15.7.2",
     "querystringify": "2.1.1",
-    "ramda": "0.26.1",
+    "ramda": "0.27.0",
     "react-native-vector-icons": "6.6.0",
     "react-native-keyboard-aware-scroll-view": "0.9.1",
-    "react-redux": "7.1.1",
-    "redux": "4.0.4",
+    "react-redux": "7.2.0",
+    "redux": "4.0.5",
     "redux-persist": "6.0.0",
-    "redux-saga": "1.1.1",
-    "reduxsauce": "1.1.0",
-    "react-native-navigation": "3.6.0",
+    "redux-saga": "1.1.3",
+    "reduxsauce": "1.1.2",
+    "react-native-navigation": "6.3.1",
     "seamless-immutable": "7.1.4",
     <%_ if (props.authType === 'session' || props.authType === 'uaa' || props.authType === 'oauth2') { _%>
     "react-native-cookies": "3.3.0",
@@ -49,18 +49,18 @@
     "tcomb-form-native": "0.6.20"
   },
   "devDependencies": {
-    "@storybook/addons": "5.2.1",
-    "@storybook/react-native": "5.2.1",
-    "@storybook/theming": "5.2.1",
+    "@storybook/addons": "5.3.17",
+    "@storybook/react-native": "5.3.17",
+    "@storybook/theming": "5.3.17",
     "babel-preset-env": "1.7.0",
-    "buffer": "5.4.3",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.14.0",
+    "buffer": "5.5.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-prettier": "3.1.2",
     "ignite-jhipster": "<%= props.packageVersion %>",
     <%_ if (!props.skipCommitHook) { _%>
-    "lint-staged": "9.3.0",
+    "lint-staged": "10.0.9",
     <%_ } _%>
     <%_ if (props.authType === 'oauth2') { _%>
     "react-native-app-auth": "4.4.0",
@@ -72,18 +72,17 @@
     "mockery": "2.1.0",
     "react-dom": "16.8.6",
     "prettier": "2.0.2",
-    "reactotron-react-native": "4.0.0",
-    "reactotron-redux": "3.1.2",
-    "reactotron-redux-saga": "4.2.2",
-    "patch-package": "6.2.0",
-    "rimraf": "3.0.0"
+    "reactotron-react-native": "5.0.0",
+    "reactotron-redux": "3.1.3",
+    "reactotron-redux-saga": "4.2.3",
+    "patch-package": "6.2.1",
+    "rimraf": "3.0.2"
   },
   <%_ if (!props.skipCommitHook) { _%>
   "lint-staged": {
     "{,app/**/,test/**/}*.{js}": [
       "prettier --write",
-      "eslint --fix --ext .js",
-      "git add"
+      "eslint --fix --ext .js"
     ]
   },
   <%_ } _%>
