--- a/templates/entity/entity-flatlist.js.ejs
+++ b/templates/entity/entity-flatlist.js.ejs
@@ -17,35 +17,25 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
     super(props)
     Navigation.events().bindComponent(this)
 
-    /* ***********************************************************
-    * STEP 1
-    * This is an array of objects with the properties you desire
-    * Usually this should come from Redux mapStateToProps
-    *************************************************************/
     this.state = {
       page: 0,
       sort: 'id,asc',
       size: 20,
-      done: false,
       <%_ if (props.searchEngine) { _%>
       searchTerm: '',
       <%_ } _%>
-      dataObjects: []
     }
-    this.fetch<%= props.pluralName %>()
   }
 
   navigationButtonPressed ({ buttonId }) {
     <%= camelCase(props.name) %>EntityEditScreen({ entityId: null })
   }
-  /* ***********************************************************
-  * STEP 2
-  * `renderRow` function. How each cell/row should be rendered
-  * It's our best practice to place a single component here:
-  *
-  * e.g.
-    return <MyCustomCell title={item.title} description={item.description} />
-  *************************************************************/
+  componentDidAppear() {
+    this.setState({ page: 0 }, () => {
+      this.handleLoadMore()
+    })
+  }
+
   renderRow ({ item }) {
     return (
       <TouchableOpacity onPress={<%= camelCase(props.name) %>EntityDetailScreen.bind(this, { entityId: item.id })}>
@@ -57,12 +47,7 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
     )
   }
 
-  /* ***********************************************************
-  * STEP 3
-  * Consider the configurations we've set below.  Customize them
-  * to your liking!  Each with some friendly advice.
-  *************************************************************/
-  // Render a header?
+  // Render a header
     <%_ if (props.searchEngine) { _%>
   renderHeader = () =>
     <SearchBar onSearch={this.performSearch} searchTerm={this.state.searchTerm} onCancel={this.cancelSearch} />
@@ -71,38 +56,14 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
   //   <Text style={[styles.label, styles.sectionHeader]}> - Header - </Text>
     <%_ } _%>
 
-  // Render a footer?
-  // renderFooter = () =>
-  //  <Text style={[styles.label, styles.sectionHeader]}> - Footer - </Text>
-
   // Show this when data is empty
   renderEmpty = () =>
     <AlertMessage title='No <%= props.pluralName %> Found' show={!this.props.fetching} />
 
-  // renderSeparator = () =>
-  //  <Text style={styles.label}> - ~~~~~ - </Text>
-
-  // The default function if no Key is provided is index
-  // an identifiable key is important if you plan on
-  // item reordering.  Otherwise index is fine
   keyExtractor = (item, index) => `${index}`
 
   // How many items should be kept im memory as we scroll?
   oneScreensWorth = 20
-
-  // extraData is for anything that is not indicated in data
-  // for instance, if you kept "favorites" in `this.state.favs`
-  // pass that in, so changes in favorites will cause a re-render
-  // and your renderItem will have access to change depending on state
-  // e.g. `extraData`={this.state.favs}
-
-  // Optimize your list if the height of each item can be calculated
-  // by supplying a constant height, there is no need to measure each
-  // item after it renders.  This can save significant time for lists
-  // of a size 100+
-  // e.g. itemLayout={(data, index) => (
-  //   {length: ITEM_HEIGHT, offset: ITEM_HEIGHT * index, index}
-  // )}
 
   <%_ if (props.searchEngine) { _%>
   cancelSearch = () => {
@@ -124,11 +85,15 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
   }
   <%_ } _%>
   fetch<%= props.pluralName %> = () => {
-    this.props.getAll<%= props.pluralName %>({ page: this.state.page, sort: this.state.sort, size: this.state.size })
+    this.props.getAll<%= props.pluralName %>({ page: this.state.page - 1, sort: this.state.sort, size: this.state.size })
   }
 
   handleLoadMore = () => {
-    if (this.state.done || this.props.fetching) {
+    <%_ if (props.entityConfig.pagination === 'no') { _%>
+    if (this.props.<%= camelCase(props.pluralName) %>.length) {
+    <%_ } else { _%>
+    if (this.state.page < this.props.links.next || this.props.links.next === undefined || this.props.fetching) {
+    <%_ } _%>
       return
     }
     this.setState({
@@ -138,22 +103,12 @@ class <%= props.name %>EntityScreen extends React.PureComponent {
     })
   }
 
-  static getDerivedStateFromProps(nextProps, prevState){
-    if (nextProps.<%= camelCase(props.pluralName) %>) {
-      return {
-        done: nextProps.<%= camelCase(props.pluralName) %>.length < prevState.size,
-        dataObjects: [...prevState.dataObjects, ...nextProps.<%= camelCase(props.pluralName) %>],
-      }
-    }
-    return null
-  }
-
   render () {
     return (
       <View style={styles.container} testID='<%= camelCase(props.name) %>Screen'>
         <FlatList
           contentContainerStyle={styles.listContent}
-          data={this.state.dataObjects}
+          data={this.props.<%= camelCase(props.pluralName) %>}
           renderItem={this.renderRow}
           keyExtractor={this.keyExtractor}
           initialNumToRender={this.oneScreensWorth}
@@ -177,7 +132,10 @@ const mapStateToProps = (state) => {
     // ...redux state to props here
     <%= camelCase(props.pluralName) %>: state.<%= camelCase(props.pluralName) %>.<%= camelCase(props.pluralName) %>,
     fetching: state.<%= camelCase(props.pluralName) %>.fetchingAll,
-    error: state.<%= camelCase(props.pluralName) %>.errorAll
+    error: state.<%= camelCase(props.pluralName) %>.errorAll,
+    <%_ if (props.entityConfig.pagination !== 'no') { _%>
+    links: state.<%= camelCase(props.pluralName) %>.links,
+    <%_ } _%>
   }
 }
 
