--- a/templates/entity/entity-detail-screen.js.ejs
+++ b/templates/entity/entity-detail-screen.js.ejs
@@ -1,5 +1,5 @@
 import React from 'react'
-import { Alert, ScrollView, Text, View } from 'react-native'
+import { ActivityIndicator, Alert, ScrollView, Text, View } from 'react-native'
 import { connect } from 'react-redux'
 import { Navigation } from 'react-native-navigation'
 import { <%= camelCase(props.name) %>EntityEditScreen } from '../../../navigation/layouts'
@@ -50,7 +50,7 @@ class <%= props.name %>EntityDetailScreen extends React.Component {
     if (!this.props.<%= camelCase(props.name) %> || this.props.fetching) {
       return (
         <View style={styles.loading}>
-          <Text style={styles.loading}>Loading...</Text>
+          <ActivityIndicator size="large" />
         </View>
       )
     }
