update react-native docs links, add npx prefix to react-native commands

--- a/boilerplate/app/modules/home/learn-more-links.component.js.ejs
+++ b/boilerplate/app/modules/home/learn-more-links.component.js.ejs
@@ -30,25 +30,25 @@ const links = [
   {
     id: 2,
     title: 'The Basics',
-    link: 'https://facebook.github.io/react-native/docs/tutorial',
+    link: 'https://reactnative.dev/docs/tutorial',
     description: 'Explains a Hello World for React Native.',
   },
   {
     id: 3,
     title: 'Style',
-    link: 'https://facebook.github.io/react-native/docs/style',
+    link: 'https://reactnative.dev/docs/style',
     description: 'Covers how to use the prop named style which controls the visuals.',
   },
   {
     id: 4,
     title: 'Layout',
-    link: 'https://facebook.github.io/react-native/docs/flexbox',
+    link: 'https://reactnative.dev/docs/flexbox',
     description: 'React Native uses flexbox for layout, learn how it works.',
   },
   {
     id: 5,
     title: 'Components',
-    link: 'https://facebook.github.io/react-native/docs/components-and-apis',
+    link: 'https://reactnative.dev/docs/components-and-apis',
     description: 'The full list of components and APIs inside React Native.',
   },
   {
