--- a/templates/entity/entity-flatlist.js.ejs
+++ b/templates/entity/entity-flatlist.js.ejs
@@ -10,7 +10,7 @@ import <%= props.name %>Actions from './<%= props.kebabName %>.reducer'
 import styles from './<%= props.kebabName %>-entity-screen-style'
 import AlertMessage from '../../../shared/components/alert-message/alert-message'
 
-// More info here: https://facebook.github.io/react-native/docs/flatlist.html
+// More info here: https://reactnative.dev/docs/flatlist.html
 
 class <%= props.name %>EntityScreen extends React.PureComponent {
   constructor (props) {
