--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -2,7 +2,7 @@
   "version": "0.0.1",
   "scripts": {
     "clean": "rimraf $TMPDIR/react-* && watchman watch-del-all && npm cache clean --force",
-    "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
+    "clean:android": "cd android/ && ./gradlew clean && cd .. && npx react-native run-android",
     "newclear": "rimraf $TMPDIR/react-* && watchman watch-del-all && rimraf ios/build && rimraf node_modules/ && npm cache clean --force && npm i",
     "test:watch": "jest --watch",
     "updateSnapshot": "jest --updateSnapshot",
