implement version replacing strategy used in jhipster
this allows dependebot to keep the dependencies up to date

--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -21,62 +21,62 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "1.9.0",
-    "apisauce": "1.1.1",
-    "format-json": "1.0.3",
-    "identity-obj-proxy": "3.0.0",
-    "lodash": "4.17.15",
-    "prop-types": "15.7.2",
-    "querystringify": "2.1.1",
-    "ramda": "0.27.0",
-    "react-native-vector-icons": "6.6.0",
-    "react-native-keyboard-aware-scroll-view": "0.9.1",
-    "react-redux": "7.2.0",
-    "redux": "4.0.5",
-    "redux-persist": "6.0.0",
-    "redux-saga": "1.1.3",
-    "reduxsauce": "1.1.2",
-    "react-native-navigation": "6.4.0",
-    "seamless-immutable": "7.1.4",
+    "@react-native-community/async-storage": "REPLACE_WITH_VERSION",
+    "apisauce": "REPLACE_WITH_VERSION",
+    "format-json": "REPLACE_WITH_VERSION",
+    "identity-obj-proxy": "REPLACE_WITH_VERSION",
+    "lodash": "REPLACE_WITH_VERSION",
+    "prop-types": "REPLACE_WITH_VERSION",
+    "querystringify": "REPLACE_WITH_VERSION",
+    "ramda": "REPLACE_WITH_VERSION",
+    "react-native-vector-icons": "REPLACE_WITH_VERSION",
+    "react-native-keyboard-aware-scroll-view": "REPLACE_WITH_VERSION",
+    "react-redux": "REPLACE_WITH_VERSION",
+    "redux": "REPLACE_WITH_VERSION",
+    "redux-persist": "REPLACE_WITH_VERSION",
+    "redux-saga": "REPLACE_WITH_VERSION",
+    "reduxsauce": "REPLACE_WITH_VERSION",
+    "react-native-navigation": "REPLACE_WITH_VERSION",
+    "seamless-immutable": "REPLACE_WITH_VERSION",
     <%_ if (props.authType === 'session' || props.authType === 'uaa' || props.authType === 'oauth2') { _%>
-    "@react-native-community/cookies": "2.0.8",
+    "@react-native-community/cookies": "REPLACE_WITH_VERSION",
     <%_ } _%>
     <%_ if (props.websockets) { _%>
-    "stompjs": "2.3.3",
-    "sockjs-client": "1.3.0",
-    "net": "1.0.2",
+    "stompjs": "REPLACE_WITH_VERSION",
+    "sockjs-client": "REPLACE_WITH_VERSION",
+    "net": "REPLACE_WITH_VERSION",
     <%_ } _%>
-    "tcomb-form-native": "0.6.20"
+    "tcomb-form-native": "REPLACE_WITH_VERSION"
   },
   "devDependencies": {
-    "@storybook/addons": "5.3.18",
-    "@storybook/react-native": "5.3.18",
-    "@storybook/theming": "5.3.18",
-    "babel-preset-env": "1.7.0",
-    "buffer": "5.5.0",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.2",
-    "eslint-config-prettier": "6.10.1",
-    "eslint-plugin-prettier": "3.1.3",
+    "@storybook/addons": "REPLACE_WITH_VERSION",
+    "@storybook/react-native": "REPLACE_WITH_VERSION",
+    "@storybook/theming": "REPLACE_WITH_VERSION",
+    "babel-preset-env": "REPLACE_WITH_VERSION",
+    "buffer": "REPLACE_WITH_VERSION",
+    "enzyme": "REPLACE_WITH_VERSION",
+    "enzyme-adapter-react-16": "REPLACE_WITH_VERSION",
+    "eslint-config-prettier": "REPLACE_WITH_VERSION",
+    "eslint-plugin-prettier": "REPLACE_WITH_VERSION",
     "ignite-jhipster": "<%= props.packageVersion %>",
     <%_ if (!props.skipCommitHook) { _%>
-    "lint-staged": "10.1.3",
+    "lint-staged": "REPLACE_WITH_VERSION",
     <%_ } _%>
     <%_ if (props.authType === 'oauth2') { _%>
-    "react-native-app-auth": "5.1.1",
+    "react-native-app-auth": "REPLACE_WITH_VERSION",
     <%_ } _%>
     <%_ if (props.detox) { _%>
-    "detox": "16.2.0",
-    "mocha": "7.1.1",
+    "detox": "REPLACE_WITH_VERSION",
+    "mocha": "REPLACE_WITH_VERSION",
     <%_ } _%>
-    "mockery": "2.1.0",
-    "react-dom": "16.8.6",
-    "prettier": "2.0.4",
-    "reactotron-react-native": "5.0.0",
-    "reactotron-redux": "3.1.3",
-    "reactotron-redux-saga": "4.2.3",
-    "patch-package": "6.2.2",
-    "rimraf": "3.0.2"
+    "mockery": "REPLACE_WITH_VERSION",
+    "react-dom": "REPLACE_WITH_VERSION",
+    "prettier": "REPLACE_WITH_VERSION",
+    "reactotron-react-native": "REPLACE_WITH_VERSION",
+    "reactotron-redux": "REPLACE_WITH_VERSION",
+    "reactotron-redux-saga": "REPLACE_WITH_VERSION",
+    "patch-package": "REPLACE_WITH_VERSION",
+    "rimraf": "REPLACE_WITH_VERSION"
   },
   <%_ if (!props.skipCommitHook) { _%>
   "lint-staged": {
