--- a/boilerplate/test/setup.js.ejs
+++ b/boilerplate/test/setup.js.ejs
@@ -23,6 +23,13 @@ jest
   })
 <%_ } _%>
   .mock('react-native-vector-icons/FontAwesome', () => 'Icon')
+  // related to 
+  .mock("redux-persist/lib/createPersistoid", () =>
+    jest.fn(() => ({
+        update: jest.fn(),
+        flush: jest.fn(),
+    }))
+  )
   .mock('@storybook/react-native', () => {
     return { getStorybookUI: jest.fn(), configure: jest.fn() }
   })
