--- a/boilerplate/app/navigation/layouts.js.ejs
+++ b/boilerplate/app/navigation/layouts.js.ejs
@@ -1,6 +1,7 @@
 import { AppState, Linking } from 'react-native'
 import { Navigation } from 'react-native-navigation'
 import { Provider } from 'react-redux'
+import React from 'react'
 import { Images } from '../shared/themes'
 
 import createStore from '../shared/reducers'
@@ -109,20 +110,63 @@ function handleOpenURL (event) {
   }
 }
 
+function registerComponentWithRedux(SCREEN_NAME, Component) {
+  Navigation.registerComponent(
+    SCREEN_NAME,
+    () => (props) => (
+      <Provider store={store}>
+        <Component {...props} />
+      </Provider>
+    ),
+    () => Component,
+  )
+}
+
+// registers screens (except the launch screen) as lazily loaded
+function registerScreensLazily() {
+  Navigation.setLazyComponentRegistrator((componentName) => {
+    switch (componentName) {
+      case LAUNCH_SCREEN:
+        registerComponentWithRedux(LAUNCH_SCREEN, LaunchScreen)
+        break
+      case STORYBOOK_SCREEN:
+        Navigation.registerComponent(STORYBOOK_SCREEN, () => StorybookScreen)
+        break
+      case LOGIN_SCREEN:
+        registerComponentWithRedux(LOGIN_SCREEN, LoginScreen)
+        break
+      case REGISTER_SCREEN:
+        registerComponentWithRedux(REGISTER_SCREEN, RegisterScreen)
+        break
+      case FORGOT_PASSWORD_SCREEN:
+        registerComponentWithRedux(FORGOT_PASSWORD_SCREEN, ForgotPasswordScreen)
+        break
+      case CHANGE_PASSWORD_SCREEN:
+        registerComponentWithRedux(CHANGE_PASSWORD_SCREEN, ChangePasswordScreen)
+        break
+      case SETTINGS_SCREEN:
+        registerComponentWithRedux(SETTINGS_SCREEN, SettingsScreen)
+        break
+      case DRAWER_CONTENT:
+        registerComponentWithRedux(DRAWER_CONTENT, DrawerContent)
+        break
+      case ENTITIES_SCREEN:
+        registerComponentWithRedux(ENTITIES_SCREEN, EntitiesScreen)
+        break
+<%_ if (props.websockets) { _%>
+      case CHAT_SCREEN:
+        registerComponentWithRedux(CHAT_SCREEN, ChatScreen)
+        break
+<%_ } _%>
+      // ignite-jhipster-navigation-registration-needle
+      default:
+        break
+    }
+  })
+}
+
 export function registerScreensAndStartApp () {
-  Navigation.registerComponentWithRedux(LOGIN_SCREEN, () => LoginScreen, Provider, store)
-  Navigation.registerComponentWithRedux(REGISTER_SCREEN, () => RegisterScreen, Provider, store)
-  Navigation.registerComponentWithRedux(FORGOT_PASSWORD_SCREEN, () => ForgotPasswordScreen, Provider, store)
-  Navigation.registerComponentWithRedux(CHANGE_PASSWORD_SCREEN, () => ChangePasswordScreen, Provider, store)
-  Navigation.registerComponentWithRedux(SETTINGS_SCREEN, () => SettingsScreen, Provider, store)
-  Navigation.registerComponentWithRedux(DRAWER_CONTENT, () => DrawerContent, Provider, store)
-  Navigation.registerComponentWithRedux(LAUNCH_SCREEN, () => LaunchScreen, Provider, store)
-  Navigation.registerComponentWithRedux(ENTITIES_SCREEN, () => EntitiesScreen, Provider, store)
-  Navigation.registerComponent(STORYBOOK_SCREEN, () => StorybookScreen)
-  <%_ if (props.websockets) { _%>
-  Navigation.registerComponentWithRedux(CHAT_SCREEN, () => ChatScreen, Provider, store)
-  <%_ } _%>
-  // ignite-jhipster-navigation-registration-needle
+  registerScreensLazily()
 
   Navigation.events().registerAppLaunchedListener(() => {
     Navigation.setDefaultOptions({
