get entity generation working

--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -58,7 +58,7 @@
     "enzyme-adapter-react-16": "REPLACE_WITH_VERSION",
     "eslint-config-prettier": "REPLACE_WITH_VERSION",
     "eslint-plugin-prettier": "REPLACE_WITH_VERSION",
-    "ignite-jhipster": "<%= packageVersion %>",
+    "generator-jhipster-react-native": "<%= packageVersion %>",
     <%_ if (!skipCommitHook) { _%>
     "lint-staged": "REPLACE_WITH_VERSION",
     <%_ } _%>
