get import-jdl generator working

--- a/generators/app/templates/app/modules/home/learn-more-links.component.js.ejs
+++ b/generators/app/templates/app/modules/home/learn-more-links.component.js.ejs
@@ -63,7 +63,7 @@ const links = [
     link: 'https://github.com/ruddell/ignite-jhipster/blob/main/docs/storybook.md',
     description: 'How to use Storybook with React Native.',
   },
-  <%_ if (websockets) { _%>
+  <%_ if (websocket) { _%>
   {
     id: 8,
     title: 'Websockets Demo',
