--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -41,7 +41,7 @@
     <%_ if (authType === 'session' || authType === 'uaa' || authType === 'oauth2') { _%>
     "@react-native-community/cookies": "REPLACE_WITH_VERSION",
     <%_ } _%>
-    <%_ if (websockets) { _%>
+    <%_ if (websocket) { _%>
     "stompjs": "REPLACE_WITH_VERSION",
     "sockjs-client": "REPLACE_WITH_VERSION",
     "net": "REPLACE_WITH_VERSION",
