--- a/generators/app/templates/app/modules/login/login.sagas.js.ejs
+++ b/generators/app/templates/app/modules/login/login.sagas.js.ejs
@@ -9,7 +9,7 @@ import CookieManager from '@react-native-community/cookies'
 
 import LoginActions from './login.reducer'
 import AccountActions from '../../shared/reducers/account.reducer'
-<%_ if (websockets) { _%>
+<%_ if (websocket) { _%>
 import WebsocketService from '../../shared/websockets/websocket.service'
 <%_ } _%>
 <%_ if (authType === 'oauth2') { _%>
@@ -82,7 +82,7 @@ export function * login (api, { username, password }) {
     yield put(LoginActions.loginSuccess(response.data))
     <%_ } _%>
     yield put(AccountActions.accountRequest())
-    <%_ if (websockets) { _%>
+    <%_ if (websocket) { _%>
     WebsocketService.setToken(response.data.id_token)
     <%_ } _%>
     yield put({ type: 'RELOGIN_OK' })
@@ -112,7 +112,7 @@ export function * loginLoad (api) {
   // only set the token if we have it
   if (authToken) {
     yield call(api.setAuthToken, authToken)
-    <%_ if (websockets) { _%>
+    <%_ if (websocket) { _%>
     WebsocketService.setToken(authToken)
     <%_ } _%>
   }
