--- a/generators/app/templates/app/shared/reducers/create-store.js.ejs
+++ b/generators/app/templates/app/shared/reducers/create-store.js.ejs
@@ -5,7 +5,7 @@ import Reactotron from 'reactotron-react-native'
 import RehydrationServices from '../services/rehydration.service'
 import ReduxPersist from '../../config/redux-persist'
 import Config from '../../config/debug-config'
-<%_ if (websockets) { _%>
+<%_ if (websocket) { _%>
 import WebsocketService from '../websockets/websocket.service'
 <%_ } _%>
 // creates the store
@@ -20,7 +20,7 @@ export default (rootReducer, rootSaga) => {
   const sagaMonitor = Config.useReactotron ? console.tron.createSagaMonitor() : null
   const sagaMiddleware = createSagaMiddleware({ sagaMonitor })
   middleware.push(sagaMiddleware)
-  <%_ if (websockets) { _%>
+  <%_ if (websocket) { _%>
   const wsSagaMiddleware = createSagaMiddleware(WebsocketService.websocketSagas)
   middleware.push(wsSagaMiddleware)
   <%_ } _%>
@@ -42,14 +42,14 @@ export default (rootReducer, rootSaga) => {
 
   // kick off root saga
   let sagasManager = sagaMiddleware.run(rootSaga)
-  <%_ if (websockets) { _%>
+  <%_ if (websocket) { _%>
   let websocketSagaManager = wsSagaMiddleware.run(WebsocketService.websocketSagas)
   <%_ } _%>
 
   return {
     store,
     sagasManager,
-    <%_ if (websockets) { _%>
+    <%_ if (websocket) { _%>
     websocketSagaManager,
     <%_ } _%>
     sagaMiddleware
